jaeger/prod/jaeger-ui-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-ui
  namespace: guardian
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jaeger.prod.nsl.xyz`)
      kind: Rule
      services:
        - name: jaeger-query
          port: 80
