jaeger/prod/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-ui
  namespace: guardian
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jaeger.prod.naturalselectionlabs.com`)
      kind: Rule
      services:
        - name: jaeger-query
          port: 80
